dhall/tests/type-errors/unit/VariableFree.txt
 --> 1:1
  |
1 | xâŠ
  | ^
  |
  = Type error: Unbound variable
